19/45 Vue.js 2 Bangla Tutorial #19: vue-cli | integrate any template of CSE-425 Project Work Completed.

--- a/my-project/package.json
+++ b/my-project/package.json
@@ -2,7 +2,7 @@
   "name": "my-project",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "Syed Zaman Mostafiz <zamanwebdeveloper>",
+  "author": "Syed Zaman Mostafiz <zamanwebdeveloper@gmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
